# Predicting-loan-default

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: feature_table_sample.csv  model_summary.json  scored_loans_sample.csv
notebooks/: legacy_default_modeling.ipynb
src/loan_default_prediction/: __init__.py  cli.py  demo.py  features.py  logging_utils.py  modeling.py  paths.py  pipeline.py
tests/: test_demo_pipeline.py  test_features.py
